Publisher and consumer created

--- a/RSocket/src/main/resources/application.properties
+++ b/RSocket/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-rsocket.server.path=/rsocket
+spring.rsocket.server.port=7000
+spring.main.lazy-initialization=true
+spring.rsocket.server.mapping-path=/rsocket
 
