--- a/RSocket/pom.xml
+++ b/RSocket/pom.xml
@@ -58,7 +58,13 @@
 			<artifactId>rsocket-test</artifactId>
 			<version>1.0.0-RC1</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>io.projectreactor</groupId>
+            <artifactId>reactor-test</artifactId>
+            <version>3.3.0.M2</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
